[package]
name = "webusb-web"
description = "WebUSB on the web 🕸️ — Access USB devices from the web browser."
authors = ["Sebastian Urban <surban@surban.net>"]
repository = "https://github.com/surban/webusb-web"
version = "0.4.1"
license = "Apache-2.0"
keywords = ["usb", "webusb"]
categories = ["hardware-support", "wasm", "web-programming"]
edition = "2021"

[dependencies]
futures-core = { version = "0.3" }
futures-util = { version = "0.3" }
js-sys = "0.3"
tokio = { version = "1.43", default-features = false, features = ["sync"] }
tokio-stream = { version = "0.1.17", default-features = false, features = [
    "sync",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "AllowedUsbDevice",
    "EventTarget",
    "Navigator",
    "Usb",
    "UsbAlternateInterface",
    "UsbConfiguration",
    "UsbConnectionEvent",
    "UsbConnectionEventInit",
    "UsbControlTransferParameters",
    "UsbDevice",
    "UsbDeviceFilter",
    "UsbDeviceRequestOptions",
    "UsbDirection",
    "UsbEndpoint",
    "UsbEndpointType",
    "UsbInterface",
    "UsbInTransferResult",
    "UsbInTransferResult",
    "UsbIsochronousInTransferPacket",
    "UsbIsochronousInTransferResult",
    "UsbIsochronousOutTransferPacket",
    "UsbIsochronousOutTransferResult",
    "UsbOutTransferResult",
    "UsbPermissionResult",
    "UsbPermissionStorage",
    "UsbRecipient",
    "UsbRecipient",
    "UsbRequestType",
    "UsbTransferStatus",
    "Window",
    "WorkerGlobalScope",
    "WorkerNavigator",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["console", "Document", "HtmlElement"] }
tokio = { version = "1.43", features = ["macros"] }

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
rustdoc-args = ["--cfg", "web_sys_unstable_apis"]
rustc-args = ["--cfg", "web_sys_unstable_apis"]

# [patch.crates-io]
# js-sys = { git = "https://github.com/rust-wasi-web/wasm-bindgen.git" }
# web-sys = { git = "https://github.com/rust-wasi-web/wasm-bindgen.git" }
# wasm-bindgen = { git = "https://github.com/rust-wasi-web/wasm-bindgen.git" }
# wasm-bindgen-futures = { git = "https://github.com/rust-wasi-web/wasm-bindgen.git" }
# wasm-bindgen-test = { git = "https://github.com/rust-wasi-web/wasm-bindgen.git" }
